tests/semantic_tokens/snapshots/r#mod__semantic_tokens__inline_tokens__bold_italic_token_modifier.snap
---
source: tests/semantic_tokens/inline_tokens.rs
expression: "format!(\"{:#?}\", tokens)"
---
[
    SemanticToken {
        delta_line: 0,
        delta_start: 0,
        length: 1,
        token_type: 2,
        token_modifiers_bitset: 2,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 1,
        length: 2,
        token_type: 2,
        token_modifiers_bitset: 3,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 20,
        token_type: 2,
        token_modifiers_bitset: 3,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 20,
        length: 2,
        token_type: 2,
        token_modifiers_bitset: 3,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 1,
        token_type: 2,
        token_modifiers_bitset: 2,
    },
]
