tests/semantic_tokens/snapshots/r#mod__semantic_tokens__inline_tokens__bold_token_modifier_after_plain.snap
---
source: tests/semantic_tokens/inline_tokens.rs
expression: "format!(\"{:#?}\", tokens)"
---
[
    SemanticToken {
        delta_line: 0,
        delta_start: 10,
        length: 2,
        token_type: 2,
        token_modifiers_bitset: 1,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 9,
        token_type: 2,
        token_modifiers_bitset: 1,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 9,
        length: 2,
        token_type: 2,
        token_modifiers_bitset: 1,
    },
]
