tests/semantic_tokens/snapshots/r#mod__semantic_tokens__inline_tokens__italic_token_modifier.snap
---
source: tests/semantic_tokens/inline_tokens.rs
expression: "format!(\"{:#?}\", tokens)"
---
[
    SemanticToken {
        delta_line: 0,
        delta_start: 0,
        length: 1,
        token_type: 2,
        token_modifiers_bitset: 4,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 1,
        length: 11,
        token_type: 2,
        token_modifiers_bitset: 4,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 11,
        length: 1,
        token_type: 2,
        token_modifiers_bitset: 4,
    },
]
